--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -4,6 +4,10 @@ name: generate snake
 
 # Controls when the workflow will run
 on:
+  push:
+    branches:
+      - master
+    
   # run automatically every 24 hours
   schedule:
     - cron: "0 */24 * * *" 
